--- a/css/elements.page.css
+++ b/css/elements.page.css
@@ -5,7 +5,11 @@
 */
 
 html {
-
+    font-size:16px ;
+    line-height: 1.5;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #111;
+    padding: 24px 24px 0 24px;
 }
 
 /*
@@ -20,5 +24,11 @@ html {
 }
 
 ::selection {
+    background: #44c8f5;
+    color: white;
 
+}
+body{
+    max-width: 42em;
+    margin: 0 auto;
 }
