--- a/css/screen.css
+++ b/css/screen.css
@@ -69,13 +69,12 @@ figure {
 }
 
 ul,
-ol,
-{
+ol {
   padding-left: 24px;
 }
 
 li ul,
-li ol{
+li ol {
   margin-bottom: 0;
 }
 
@@ -97,20 +96,21 @@ figcaption {
 hr {
   border: 0;
   height: 1px;
-  background:lightgray;
-  margin: 0 0 24px
+  background: lightgray;
+  margin: 0 0 24px;
 }
 
 a {
-
+  color: royalblue;
+  transition: all 0.1s ease-in-out;
 }
 
 a:hover,
 a:focus {
-
+  color: crimson;
 }
 
 a:visited,
 a:active {
-    
+  color: blueviolet;
 }
