--- a/css/screen.css
+++ b/css/screen.css
@@ -4,6 +4,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #111;
   padding: 24px 24px 0 24px;
+  scroll-behavior: smooth;
 }
 
 ::-moz-selection {
